@@ -95,9 +95,9 @@ char *user_config_file = NULL;
 int disable_cache;
 
 static void mkcatdirs (const char *mandir, const char *catdir);
-static __inline__ char *get_manpath_from_path (const char *path);
-static __inline__ char *has_mandir (const char *p);
-static __inline__ char *fsstnd (const char *path);
+static inline char *get_manpath_from_path (const char *path);
+static inline char *has_mandir (const char *p);
+static inline char *fsstnd (const char *path);
 static char *def_path (int flag);
 static void add_dir_to_list (char **lp, const char *dir);
 static char **add_dir_to_path_list (char **mphead, char **mp, const char *p);
@@ -305,19 +305,19 @@ static char *pathappend (char *oldpath, const char *appendage)
 		return xstrdup (appendage);
 }
 
-static __inline__ void gripe_reading_mp_config (const char *file)
+static inline void gripe_reading_mp_config (const char *file)
 {
 	error (FAIL, 0,
 	       _("can't make sense of the manpath configuration file %s"),
 	       file);
 }
 
-static __inline__ void gripe_stat_file (const char *file)
+static inline void gripe_stat_file (const char *file)
 {
 	debug_error (_("warning: %s"), file);
 }
 
-static __inline__ void gripe_not_directory (const char *dir)
+static inline void gripe_not_directory (const char *dir)
 {
 	if (!quiet)
 		error (0, 0, _("warning: %s isn't a directory"), dir);
@@ -880,7 +880,7 @@ static char *def_path (int flag)
  * $HOME/man exists -- the directory $HOME/man will be added
  * to the manpath.
  */
-static __inline__ char *get_manpath_from_path (const char *path)
+static inline char *get_manpath_from_path (const char *path)
 {
 	int len;
 	char *tmppath;
@@ -1013,7 +1013,7 @@ static void add_dir_to_list (char **lp, const char *dir)
 
 /* path does not exist in config file: check to see if path/../man or 
    path/man exist.  If so return it, if not return NULL. */
-static __inline__ char *has_mandir (const char *path)
+static inline char *has_mandir (const char *path)
 {
 	char *newpath = NULL;
 
@@ -1175,7 +1175,7 @@ int is_global_mandir (const char *dir)
 
 /* Accept a manpath (not a full pathname to a file) and return an FSSTND 
    equivalent catpath */
-static __inline__ char *fsstnd (const char *path)
+static inline char *fsstnd (const char *path)
 {
 	char *manpath;
 	char *catpath;
